<resources>
    <string name="app_name">Week-4-execrise</string>
    <string name="left_menu_linkIn">PADC - LinkedIn</string>
    <string name="left_menu_jobSearch">PADC - Job Search</string>
    <string name="left_menu_pulse">PADC - Pulse</string>
    <string name="left_menu_movie">PADC - Movie</string>
    <string name="left_menu_book">PADC - Book</string>
    <string name="action_settings">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_detail">Warcraft (alternatively known as Warcraft: The Beginning)[4] is a 2016 American fantasy film directed by Duncan Jones and written by s...</string>
</resources>
